# FreeRTOS_template

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  app.cpp
config/driver_smoke/: FreeRTOSConfig.h
config/driver_smoke/driver_ids/: adc_id.hpp  can_id.hpp  common.hpp  eeprom_id.hpp  flash_memory_id.hpp  gpio_id.hpp  pwm_id.hpp  timer_id.hpp
config/tmpl/: FreeRTOSConfig.h
config/tmpl/driver_ids/: can_id.hpp  gpio_id.hpp  nv_memory_id.hpp  serial_id.hpp  timer_id.hpp  watchdog_id.hpp
include/driver_ids/: adc_id.hpp  can_id.hpp  timer_id.hpp  watchdog_id.hpp
instances/host/: CMakeLists.txt  freertos_impl.c  main.cpp
instances/posix/: CMakeLists.txt  freertos_impl.c  main.cpp
instances/stm32/: CMakeLists.txt  toolchain.cmake
instances/stm32/stm32h5xx/: CMakeLists.txt
instances/stm32/stm32h5xx/Inc/: freertos_stm32_config.h  main.h
instances/stm32/stm32h5xx/Src/: main.cpp  stm32h5xx_hal_msp.c  stm32h5xx_it.c
instances/stm32/stm32h5xx/linker/: STM32H562xx_FLASH.ld  STM32H563xx_FLASH.ld
instances/stm32/stm32h5xx/stm32h562rgt6/: CMakeLists.txt
instances/stm32/stm32h5xx/stm32h563vit6x/: CMakeLists.txt
lib/drivers/: CMakeLists.txt
lib/drivers/include/: adc.hpp  clock.hpp  common.hpp  eeprom.hpp  flash_memory.hpp  gpio.hpp  nv_memory.hpp  pwm.hpp  serial.hpp  timer.hpp  watchdog.hpp
lib/drivers/include/can/: bx_can.hpp  can.hpp  flex_can.hpp  m_can.hpp  multi_can.hpp
lib/drivers/instances/: instance_layout.cmake
lib/drivers/instances/console/: CMakeLists.txt  bx_can.cpp  can_helpers.hpp  common.cpp  gpio.cpp  m_can.cpp  nv_memory.cpp  pwm.cpp  serial.cpp  timer.cpp  watchdog.cpp
lib/drivers/instances/console/opaque/: opaque_common.hpp  opaque_gpio.hpp  opaque_nv_memory.hpp  opaque_pwm.hpp  opaque_serial.hpp  opaque_watchdog.hpp
lib/drivers/instances/console/utils/: common.hpp
lib/drivers/instances/host/: CMakeLists.txt  adc.cpp  bx_can.cpp  can_helpers.hpp  clock.cpp  common.cpp  eeprom.cpp  flash_memory.cpp  flex_can.cpp  gpio.cpp  m_can.cpp  multi_can.cpp  nv_memory.cpp  serial.cpp  timer.cpp  watchdog.cpp
lib/drivers/instances/host/opaque/: opaque_adc.hpp  opaque_can.hpp  opaque_eeprom.hpp  opaque_flash_memory.hpp  opaque_nv_memory.hpp  opaque_timer.hpp  opaque_watchdog.hpp
lib/drivers/instances/host/platform/: win32.cpp
lib/drivers/instances/host/utils/: common.hpp
lib/drivers/instances/posix/: CMakeLists.txt  README.md  adc.cpp  bx_can.cpp  gpio.cpp  m_can.cpp  mapping.hpp  nv_memory.cpp  pwm.cpp  serial.cpp  test_board.toml  timer.cpp  watchdog.cpp
lib/drivers/instances/posix/opaque/: opaque_adc.hpp  opaque_can.hpp  opaque_common.hpp  opaque_gpio.hpp  opaque_nv_memory.cpp  opaque_nv_memory.hpp  opaque_pwm.hpp  opaque_serial.cpp  opaque_serial.hpp  opaque_timer.cpp  opaque_timer.hpp
lib/drivers/instances/posix/utils/: common.cpp  common.hpp
lib/drivers/instances/posix/utils/test/: virtual_driver_test.cpp  virtual_driver_test.h
lib/drivers/instances/stm32h5xx/: CMakeLists.txt  adc.cpp  bx_can.cpp  can_internal.cpp  can_internal.hpp  clock.cpp  eeprom.cpp  flash_memory.cpp  gpio.cpp  m_can.cpp  mapping.hpp  pwm.cpp  serial.cpp  timer.cpp
lib/drivers/instances/stm32h5xx/config/driver_smoke/: mapping.hpp
lib/drivers/instances/stm32h5xx/config/tmpl/: mapping.hpp
lib/drivers/instances/stm32h5xx/opaque/: opaque_adc.cpp  opaque_adc.hpp  opaque_can.hpp  opaque_common.cpp  opaque_common.hpp  opaque_eeprom.cpp  opaque_eeprom.hpp  opaque_flash_memory.cpp  opaque_flash_memory.hpp  opaque_gpio.cpp  opaque_gpio.hpp  opaque_nv_memory.cpp  opaque_nv_memory.hpp  opaque_nv_memory_eeprom.cpp  opaque_nv_memory_eeprom.hpp  opaque_nv_memory_flash_region.cpp  opaque_nv_memory_flash_region.hpp  opaque_pwm.cpp  opaque_pwm.hpp  opaque_serial.cpp  opaque_serial.hpp  opaque_timer.cpp  opaque_timer.hpp  opaque_watchdog.cpp  opaque_watchdog.hpp
lib/drivers/instances/stm32h5xx/usb/: usb_cdc.c  usb_cdc.h  usb_cdc_standalone.c
lib/drivers/instances/stm32h5xx/utils/: common.hpp
src/: CMakeLists.txt
tests/board/driver_smoke/: test_eeprom.cpp
tests/on_target/driver_smoke/: CMakeLists.txt  app.cpp  smoke_test.hpp  test_adc.cpp  test_can.cpp  test_freertos.cpp  test_nv_memory.cpp  test_report.cpp
